fugly fix for misaligned establishment description

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,9 @@ img {
 }
 
 
-
+.establishment{
+text-indent:0px;
+}
 
 
 
